--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     },
     "devDependencies": {
         "@eslint/js": "^9",
-        "@vitejs/plugin-react": "^4",
         "eslint": "^9",
+
+        "sass": "^1",
+
+        "@vitejs/plugin-react": "^4",
         "eslint-plugin-react-hooks": "^5",
         "eslint-plugin-react-refresh": "^0",
-        "globals": "^15",
-        "vite": "^6"
+        "vite": "^6",
+
+        "i18next": "^24",
+        "react-i18next": "^15",
+
+        "globals": "^15"
     }
 }
